syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.user";
option java_outer_classname = "UserServiceProto";

package user;

// User Service Definition
service UserService {
  // Find user by ID
  rpc FindUserById(FindUserByIdRequest) returns (UserResponse);
  
  // Find user by email
  rpc FindUserByEmail(FindUserByEmailRequest) returns (UserResponse);
  
  // Find user by identifier (username or email)
  rpc FindUserByIdentifier(FindUserByIdentifierRequest) returns (UserResponse);
  
  // Create new user
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // Activate user account
  rpc ActivateUser(ActivateUserRequest) returns (UserResponse);
  
  // Authenticate user
  rpc AuthenticateUser(AuthenticateUserRequest) returns (UserResponse);
  
  // Change user password
  rpc ChangePassword(ChangePasswordRequest) returns (UserResponse);
  
  // Forgot password
  rpc ForgotPassword(ForgotPasswordRequest) returns (UserResponse);
  
  // Reset password
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

// Request Messages
message FindUserByIdRequest {
  string user_id = 1;
}

message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByIdentifierRequest {
  string identifier = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string fullname = 4;
}

message ActivateUserRequest {
  string email = 1;
}

message AuthenticateUserRequest {
  string identifier = 1;
  string password = 2;
}

message ChangePasswordRequest {
  string email = 1;
  string current_password = 2;
  string new_password = 3;
}

message ForgotPasswordRequest {
  string email = 1;
  string new_password = 2;
}

message ResetPasswordRequest {
  string email = 1;
}

// Response Messages
message UserResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
}

message ResetPasswordResponse {
  int32 code = 1;
  string message = 2;
  string new_password = 3;
}

// User Entity
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullname = 4;
  string role = 5;
  string status = 6;
  string avatar = 7;
  string created_at = 8;
  string updated_at = 9;
}
